terraform-C/modules/route_table/main.tf
resource "aws_route_table" "modules_rt_public" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.igw_id
  }

  tags = {
    Name = "ktb-cruming-rt"
  }
}

resource "aws_route_table_association" "modules_rta_public" {
  subnet_id      = var.subnet_temp_id
  route_table_id = aws_route_table.modules_rt_public.id
}

resource "aws_route_table" "modules_rt_private" {
  vpc_id = var.vpc_id

  route {
    cidr_block      = "0.0.0.0/0"
    nat_gateway_id  = var.nat_id
  }

  tags = {
    Name = var.route_table_private_name
  }
}

resource "aws_route_table_association" "modules_rta_private" {
  for_each = {
    fe_subnet_id = var.subnet_fe_id
    be_subnet_id = var.subnet_be_id
  }
  subnet_id       = each.value
  route_table_id  = aws_route_table.modules_rt_private.id
}
